corrected link for footer__advert that was not showing up

--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,10 @@ button.lucky__search {
     display: inline-block;
     font-size: 14px;
 }
+
+#footing-container {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 44%;
+}
